--- a/index.html
+++ b/index.html
@@ -204,6 +204,16 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="#"><i class="fab fa-behance fa-2x"></i></a>
+        </div>
+        <p>Copyright &copy; 2021 edgeledger</p>
+    </footer>
 </body>
 
 </html>
